crates/compiler/src/tests/e2e/good/0574_shadow_println_value/main.gom
fn println(x: string) -> int32 {
    print("local:" + x + "\n");
    7
}

fn main() {
    let x = println("a");
    print(x.to_string() + "\n");
}
