crates/compiler/src/tests/e2e/bad/0008_wrong_type_annotation/main.gom
fn main() -> unit {
  let count: int32 = "forty-two";
  println(count)
}
